--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "itty-router": "^2.6.1"
+    "itty-router": "^2.6.1",
+    "itty-router-extras": "^0.4.2"
   }
 }
