--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "itty-router": "^2.6.1",
-    "itty-router-extras": "^0.4.2"
+    "itty-router-extras": "^0.4.2",
+    "openai": "^3.0.0"
   }
 }
