--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "itty-router": "^2.6.1",
-    "itty-router-extras": "^0.4.2",
-    "openai": "^3.0.0"
+    "itty-router-extras": "^0.4.2"
   }
 }
