--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "name": "gmapps-api-v1",
   "version": "1.0.0",
   "description": "A template for kick starting a Cloudflare Workers project",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
@@ -15,6 +15,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "html-loader": "^4.1.0",
     "itty-router": "^2.6.1",
     "itty-router-extras": "^0.4.2"
   }
