--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "description": "A template for kick starting a Cloudflare Workers project",
   "main": "./src/index.js",
   "scripts": {
+    "build": "webpack",
+    "build:watch": "webpack --watch",
+    "preview": "workers-preview < dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
   "author": "Giovanni Moscato <69764323+codingcodewhilegoofin@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "html-loader": "^4.1.0",
